--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'fabric-loom' version '1.3.8'
 }
 
+archives_base_name = project.archives_base_name
 group = project.maven_group
 
 dependencies {
