forge support bruh

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ loader_version=0.14.21
 # Mod Properties
 mod_version = 1.0-SNAPSHOT
 maven_group = me.mrnavastar
-archives_base_name = "blackbox"
+archives_base_name = blackbox
