--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,16 @@ plugins {
 archives_base_name = project.archives_base_name
 group = project.maven_group
 
+repositories {
+    maven { url = 'https://maven.minecraftforge.net' }
+}
+
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+    implementation files('libs/CursedForge-1.0.jar')
 }
 
 def targetJavaVersion = 17
@@ -24,11 +30,11 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-    archivesBaseName = project.archives_base_name
+    archivesBaseName = archives_base_name
 }
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
+        rename { "${it}_${archives_base_name}"}
     }
 }
