--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    implementation files('libs/CursedForge-1.0.jar')
+    compileOnly "net.minecraftforge:javafmllanguage:${project.forge_version}"
+    compileOnly("net.minecraftforge:fmlloader:${project.forge_version}")
 }
 
 def targetJavaVersion = 17
