--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,8 @@ minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.9
 loader_version=0.14.21
 
+forge_version=1.20.1-47.1.0
+
 # Mod Properties
 mod_version = 1.0-SNAPSHOT
 maven_group = me.mrnavastar
