--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
 archives_base_name = project.archives_base_name
 group = project.maven_group
 
+loom {
+	accessWidenerPath = file("src/main/resources/blackbox.aw")
+}
+
 repositories {
     maven { url = 'https://maven.minecraftforge.net' }
 }
@@ -15,7 +19,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     compileOnly "net.minecraftforge:javafmllanguage:${project.forge_version}"
-    compileOnly("net.minecraftforge:fmlloader:${project.forge_version}")
+    compileOnly "net.minecraftforge:fmlloader:${project.forge_version}"
 }
 
 def targetJavaVersion = 17
